--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,4 +12,11 @@ services:
       POSTGRES_USER:      ${PG_USER:-postgres}
     volumes:
       - ./tmp/pg-data:/var/lib/postgresql/data
+      - ./docker/postgresql/init-scripts/:/docker-entrypoint-initdb.d/
     #TODO(Kharlamov): Add healthcheck
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${PG_USER:-postgres} -d ${PG_DB:-iot_test_problem}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
